--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
 
-      - setup_remote_docker:
+      - setup_remote_docker
 
       - run: |
           curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login | sh
