--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: docker
+      - image: google/cloud-sdk
 
     working_directory: ~/jupyter-image
 
@@ -12,6 +12,6 @@ jobs:
       - setup_remote_docker
 
       - run: |
-          apk --no-cache add curl
+          apk --no-cache add curl docker
           curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login | sh
           ./build.sh
