--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,14 @@ jobs:
       - setup_remote_docker
 
       - run: |
-          apt-get update && apt-get install -y curl docker
+          apt-get update && apt-get install apt-transport-https ca-certificates curl gnupg2 software-properties-common
+          curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+          add-apt-repository \
+            "deb [arch=amd64] https://download.docker.com/linux/debian \
+            $(lsb_release -cs) \
+            stable"
+          apt-get update && apt-get install docker-ce
+
           curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login-2.0 | bash
       - run: |
           ./build.sh
