--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ jobs:
             "deb [arch=amd64] https://download.docker.com/linux/debian \
             $(lsb_release -cs) \
             stable"
-          apt-get install -y docker-ce
+          apt-get update && apt-get install -y docker-ce
 
           curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login-2.0 | bash
       - run: |
