--- a/circle.yml
+++ b/circle.yml
@@ -12,14 +12,12 @@ jobs:
       - setup_remote_docker
 
       - run: |
-          apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common
-          curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-          add-apt-repository \
-            "deb [arch=amd64] https://download.docker.com/linux/debian \
-            $(lsb_release -cs) \
-            stable"
-          apt-get update && apt-get install -y docker-ce
-
-          curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login-2.0 | bash
+            set -x
+            VER="17.03.0-ce"
+            apt-get update && apt-get install -y curl
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+            curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login-2.0 | bash
       - run: |
           ./build.sh
