--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,9 @@
 version: 2
+
 jobs:
   build:
     docker:
-      - image: google/cloud-sdk
+      - image: quartic/uber-builder:21
 
     working_directory: ~/jupyter-image
 
@@ -12,12 +13,5 @@ jobs:
       - setup_remote_docker
 
       - run: |
-            set -x
-            VER="17.03.0-ce"
-            apt-get update && apt-get install -y curl
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-            curl https://raw.githubusercontent.com/quartictech/circleci-utils/develop/circleci-gcloud-login-2.0 | bash
-      - run: |
+          gcloud-auth
           ./build.sh
