--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,16 +20,12 @@ jobs:
             name: Run tests
             # See https://circleci.com/docs/2.0/building-docker-images/#mounting-folders
             command: |
-              docker create --name test quartic/jupyter:${CIRCLE_BUILD_NUM} sudo -E -u jovyan /home/jovyan/test/run_tests.sh
+              docker create --name test jupyter sudo -E -u jovyan /home/jovyan/test/run_tests.sh
               # This permission change (along with the -a below) seems to be necessary to ensure
               # the quartic user inside the container can write to the test directory.
               chmod -R a+rw $(pwd)/test
               docker cp -a $(pwd)/test test:/home/jovyan/test
               docker start -a test
-
-      - run: |
-          gcloud-auth --with-docker
-          ./build.sh
 
       - run:
           name: GCloud auth
